--- a/exercise/2025_0218/main.html
+++ b/exercise/2025_0218/main.html
@@ -3,19 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Grid Line Numbers Layout</title>
+    <title>CSS Grid Layout</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <div class="item a">a</div>
-        <div class="item b">b</div>
-        <div class="item c">c</div>
-        <div class="item d">
-            <div class="nested e">e (child of d)</div>
-            <div class="nested f">f (child of d)</div>
-            <div class="nested g">g (child of d)</div>
+    <div class="grid-container">
+        <div class="header"></div>
+        <div class="header"></div>
+        <div class="main-content">
+            <div class="nested-grid">
+                <div class="nested-item"></div>
+                <div class="nested-item"></div>
+                <div class="nested-item"></div>
+            </div>
         </div>
     </div>
 </body>
 </html>
+
